@@ -7,6 +7,7 @@ spice (0.10.1-3) UNRELEASED; urgency=low
   * do not require root in clean target
   * build-depend on autoconf, automake, libtool and python to be able
     to run autoreconf and python code generator
+  * consolidate clean target in debian/rules
 
  -- Michael Tokarev <mjt@tls.msk.ru>  Sat, 02 Jun 2012 16:18:56 +0400
 
